[project]
name = "rcs-pad"
version = "0.1.0"
dependencies = [
    "requests>=2.28.0",
    "flet>=0.85.3",        # 👈 明确指定 >=0.85.3
]
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
]

[tool.flet]
org = "com.mycompany"
product = "rcs-pad"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"